--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Pat's Salmon Cookies</title>
-</head>
-<body>
-  <header>
-    <h1>Pat's Salmon Cookies</h1>
-    <a href="sales.html"></a> 
-  </header>
-  
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Pat's Salmon Cookies</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+  </head>
+  <body>
+    <h1>Welcome to Pat's Salmon Cookies!</h1>
+    <!-- TODO: add a link to the sales page -->
+    <a href="sales.html">sales page</a>
+    <img src="img/salmon.png">
+  </body>
 </html>
