changes made in css and sales.html

--- a/sales.html
+++ b/sales.html
@@ -16,6 +16,15 @@
     <ul id="paris-list">Paris</ul>
     <ul id="lima-list">Lima</ul>
   
+  <table>
+    <thead>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </thead>
+  </table>
   </main>
   <script src="js/app.js"></script>
 </body>
