--- a/sales.html
+++ b/sales.html
@@ -10,21 +10,69 @@
     <h1>Pat's Salmon Cookies</h1>
   </header>
   <main>
-    <ul id="seattle-list">Seattle</ul>
+    <section id="table-data"></section>
+    <!-- <ul id="seattle-list">Seattle</ul>
     <ul id="tokyo-list">Tokyo</ul>
     <ul id="dubai-list">Dubai</ul>
     <ul id="paris-list">Paris</ul>
-    <ul id="lima-list">Lima</ul>
-  
-  <table>
-    <thead>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
+    <ul id="lima-list">Lima</ul> -->
+  <!-- <table>
+    <thead> -->
+      <!-- <tr>
+        <th>header data</th>
+        <th>header data</th>
+        <th>header data</th>
+        <th>header data</th>
+        <th>header data</th>
+      </tr>
     </thead>
-  </table>
+     <tbody>
+       <tr>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td>
+      </tr>
+      <tr>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td>
+      </tr>
+      <tr>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td>
+      </tr>
+      <tr>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td> 
+      </tr>
+      <tr>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td> 
+      </tr>
+    </tbody>
+    <footer>
+      <tr>
+      <td>Footer Data</td>
+      <td>Footer Data</td>
+      <td>Footer Data</td>
+      <td>Footer Data</td>
+      <td>Footer Data</td>
+    </tr> -->
+    <!-- </footer>
+  </table> -->
   </main>
   <script src="js/app.js"></script>
 </body>
