--- a/sales.html
+++ b/sales.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <title>Pat's Salmon Cookies</title>
+  <!-- <link rel="stylesheet" href="css/reset.css"> -->
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="sales.css">
 </head>
 <body>
   <header>
@@ -11,68 +11,6 @@
   </header>
   <main>
     <section id="table-data"></section>
-    <!-- <ul id="seattle-list">Seattle</ul>
-    <ul id="tokyo-list">Tokyo</ul>
-    <ul id="dubai-list">Dubai</ul>
-    <ul id="paris-list">Paris</ul>
-    <ul id="lima-list">Lima</ul> -->
-  <!-- <table>
-    <thead> -->
-      <!-- <tr>
-        <th>header data</th>
-        <th>header data</th>
-        <th>header data</th>
-        <th>header data</th>
-        <th>header data</th>
-      </tr>
-    </thead>
-     <tbody>
-       <tr>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td>
-      </tr>
-      <tr>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td>
-      </tr>
-      <tr>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td>
-      </tr>
-      <tr>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td> 
-      </tr>
-      <tr>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td> 
-      </tr>
-    </tbody>
-    <footer>
-      <tr>
-      <td>Footer Data</td>
-      <td>Footer Data</td>
-      <td>Footer Data</td>
-      <td>Footer Data</td>
-      <td>Footer Data</td>
-    </tr> -->
-    <!-- </footer>
-  </table> -->
   </main>
   <script src="js/app.js"></script>
 </body>
