lab seven complete

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
   </head>
   <body>
+    <header>
     <h1>Welcome to Pat's Salmon Cookies!</h1>
+    <header>
     <!-- TODO: add a link to the sales page -->
     <a href="sales.html">sales page</a>
     <img src="img/salmon.png">
