--- a/sales.html
+++ b/sales.html
@@ -10,7 +10,7 @@
     <h1>Pat's Salmon Cookies</h1>
   </header>
   <main>
-    <section id="table-data"></section>
+    <table id="table-data"></table>
   </main>
   <script src="js/app.js"></script>
 </body>
