--- a/index.html
+++ b/index.html
@@ -3,16 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>Pat's Salmon Cookies</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
   </head>
   <body>
     <header>
     <h1>Welcome to Pat's Salmon Cookies!</h1>
     <header>
+      <p>visit one of our many locations around the world.</p>
+      <ul>
+        <li>Seattle<br>
+          211 Git Sum Ave<b></li>
+        <li>Tokyo<br>
+        Got You Sum Ave<br></li>
+        <li>Dubai<br>
+        I Got Sum Ave</li>
+        <li>Paris<br>
+        Did You Get Sum Ave</li>
+        <li>Lima<br>
+        Should Have Got Sum Ave<br></li>
+      </ul>
     <!-- TODO: add a link to the sales page -->
     <a href="sales.html">sales page</a>
     <img src="img/salmon.png">
+    <footer>
+      <img src="img/salmon.png" alt="picture of chinook">
+    </footer>
   </body>
 </html>
