--- a/sales.html
+++ b/sales.html
@@ -4,6 +4,8 @@
   <title>Pat's Salmon Cookies</title>
   <!-- <link rel="stylesheet" href="css/reset.css"> -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="sales.html">
+  <a href="index.html">Main Page</a>
 </head>
 <body>
   <header>
