finished footer and modified css

--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
       <p>visit one of our many locations around the world.</p>
       <ul>
         <li>Seattle<br>
-          211 Git Sum Ave<b></li>
+        211 Git Sum Ave<b></li>
         <li>Tokyo<br>
-        Got You Sum Ave<br></li>
+        212 Got You Sum Ave<br></li>
         <li>Dubai<br>
-        I Got Sum Ave</li>
+        213 I Got Sum Ave</li>
         <li>Paris<br>
-        Did You Get Sum Ave</li>
+        214 Did You Get Sum Ave</li>
         <li>Lima<br>
-        Should Have Got Sum Ave<br></li>
+        215 Should Have Got Sum Ave<br></li>
       </ul>
     <!-- TODO: add a link to the sales page -->
     <a href="sales.html">sales page</a>
     <img src="img/salmon.png">
+    <img src="img/salmon2.png" alt="pic of fish">
     <footer>
-      <img src="img/salmon.png" alt="picture of chinook">
     </footer>
   </body>
 </html>
