--- a/sales.html
+++ b/sales.html
@@ -12,6 +12,12 @@
     <h1>Pat's Salmon Cookies</h1>
   </header>
   <main>
+    <form>
+      <fieldset>
+        
+      </fieldset>
+    </form>
+
     <table id="table-data"></table>
   </main>
   <script src="js/app.js"></script>
