--- a/index.html
+++ b/index.html
@@ -16,12 +16,17 @@
       <ul>
         <li>Seattle<br>
         211 Sum Ave<b></li>
+
         <li>Tokyo<br>
         212 Got You Sum Ave<br></li>
+
         <li>Dubai<br>
-        213 I Got Sum Ave</li>
+        213 I Got Sum Ave, Sharjah Dubai,  
+        United Arab Emirates.</li>
+
         <li>Paris<br>
         214 Did You Get Sum Ave</li>
+
         <li>Lima<br>
         215 Got Sum Ave<br></li>
       </ul>
